tests/baselines/reference/unusedMultipleParameter2InFunctionExpression.errors.txt
tests/cases/compiler/unusedMultipleParameter2InFunctionExpression.ts(3,9): error TS6133: 'unused' is declared but never used.


==== tests/cases/compiler/unusedMultipleParameter2InFunctionExpression.ts (1 errors) ====
    
    var func = function(person: string, person2: string) {
        var unused = 20;
            ~~~~~~
!!! error TS6133: 'unused' is declared but never used.
        person2 = "Dummy value";
    }